fixed banner
banner was too big. resized the image check css img.rezise

--- a/css/Mackaex.css
+++ b/css/Mackaex.css
@@ -11,11 +11,15 @@ header{
 	background-color: antiquewhite;
 	border-radius: 10px;
 	background-image: url('../img/banner.png');
-	padding: 40px;
+	padding: 28px;
 	text-align: center;
 	box-shadow: 0 2px 4px;
 	background-size: 5000px 900px;
 	margin: 0 auto;
+}
+img.resize{
+	width: 250px;
+	height: 250px;
 }
 h2{
 	margin: 0 auto;
@@ -50,6 +54,7 @@ h1{
 	text-align: center;
 	font-size: 20px;
 	margin: 2px;
+	border-radius: 10px;
 }
 .Menue ul li a{
 	text-decoration: none;
